check_sse2.log
warning: unused imports: `Response` and `header::CONTENT_TYPE`
 --> http\src\sse.rs:2:12
  |
2 | use http::{header::CONTENT_TYPE, Response};
  |            ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `BodyExt` and `StreamBody`
 --> http\src\sse.rs:3:22
  |
3 | use http_body_util::{StreamBody, BodyExt};
  |                      ^^^^^^^^^^  ^^^^^^^

warning: unused import: `StreamExt`
 --> http\src\sse.rs:7:36
  |
7 | use futures_util::stream::{Stream, StreamExt};
  |                                    ^^^^^^^^^

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1535:25
     |
1535 |                     let mut res = (entry.handler)(parts, &resources).await;
     |                         ----^^^
     |                         |
     |                         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1549:25
     |
1549 |                     let mut res = route_service.oneshot(req).await;
     |                         ----^^^
     |                         |
     |                         help: remove this `mut`

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1569:21
     |
1569 |                 let mut fallback_res = if let Some(ref fb) = fallback {
     |                     ----^^^^^^^^^^^^
     |                     |
     |                     help: remove this `mut`

warning: `ranvier-http` (lib) generated 6 warnings (run `cargo fix --lib -p ranvier-http` to apply 6 suggestions)
    Checking sse-streaming-demo v0.1.0 (F:\project\ranvier\ranvier-workspace\ranvier\examples\sse-streaming-demo)
error[E0277]: `(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)` cannot be shared between threads safely
    --> examples\sse-streaming-demo\src\main.rs:57:62
     |
  57 |     let handler = Axon::<(), (), Infallible, ()>::new("sse").then(SseHandler);
     |                                                              ^^^^ `(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)` cannot be shared between threads safely
     |
     = help: the trait `Sync` is not implemented for `(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)`
     = note: required for `Unique<(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)>` to implement `Sync`
note: required because it appears within the type `Box<(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)>`
    --> C:\Users\realwolf\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\alloc\src\boxed.rs:234:12
     |
 234 | pub struct Box<
     |            ^^^
note: required because it appears within the type `Pin<Box<(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)>>`
    --> C:\Users\realwolf\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\pin.rs:1094:12
     |
1094 | pub struct Pin<Ptr> {
     |            ^^^
note: required because it appears within the type `Sse<Pin<Box<dyn Stream<Item = Result<SseEvent, Infallible>> + Send>>>`
    --> F:\project\ranvier\ranvier-workspace\ranvier\http\src\sse.rs:83:12
     |
  83 | pub struct Sse<S> {
     |            ^^^
note: required by a bound in `Axon::<In, Out, E, Res>::then`
    --> F:\project\ranvier\ranvier-workspace\ranvier\runtime\src\axon.rs:157:22
     |
 155 |     pub fn then<Next, Trans>(self, transition: Trans) -> Axon<In, Next, E, Res>
     |            ---- required by a bound in this associated function
 156 |     where
 157 |         Next: Send + Sync + 'static,
     |                      ^^^^ required by this bound in `Axon::<In, Out, E, Res>::then`
     = note: the full name for the type has been written to 'F:\project\ranvier\ranvier-workspace\ranvier\target\debug\deps\sse_streaming_demo-20dd2d20c8b5f202.long-type-6886525801599593631.txt'
     = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)` cannot be shared between threads safely
    --> examples\sse-streaming-demo\src\main.rs:59:25
     |
  59 |         .get("/events", handler);
     |          ---            ^^^^^^^ `(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)` cannot be shared between threads safely
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `Sync` is not implemented for `(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)`
help: the trait `IntoResponse` is implemented for `ranvier_http::Sse<S>`
    --> F:\project\ranvier\ranvier-workspace\ranvier\http\src\sse.rs:123:1
     |
 123 | / impl<S, E> IntoResponse for Sse<S>
 124 | | where
 125 | |     S: Stream<Item = Result<SseEvent, E>> + Send + Sync + Unpin + 'static,
 126 | |     E: Into<Box<dyn std::error::Error + Send + Sync>> + Send + Sync + 'static,
     | |______________________________________________________________________________^
     = note: required for `Unique<(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)>` to implement `Sync`
note: required because it appears within the type `Box<(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)>`
    --> C:\Users\realwolf\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\alloc\src\boxed.rs:234:12
     |
 234 | pub struct Box<
     |            ^^^
note: required because it appears within the type `Pin<Box<(dyn Stream<Item = Result<ranvier_http::SseEvent, Infallible>> + Send + 'static)>>`
    --> C:\Users\realwolf\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\pin.rs:1094:12
     |
1094 | pub struct Pin<Ptr> {
     |            ^^^
     = note: required for `Sse<Pin<Box<dyn Stream<Item = Result<SseEvent, Infallible>> + Send>>>` to implement `IntoResponse`
note: required by a bound in `ranvier_http::HttpIngress::<R>::get`
    --> F:\project\ranvier\ranvier-workspace\ranvier\http\src\ingress.rs:1219:14
     |
1217 |     pub fn get<Out, E>(self, path: impl Into<String>, circuit: Axon<(), Out, E, R>) -> Self
     |            --- required by a bound in this associated function
1218 |     where
1219 |         Out: IntoResponse + Send + Sync + 'static,
     |              ^^^^^^^^^^^^ required by this bound in `HttpIngress::<R>::get`
     = note: the full name for the type has been written to 'F:\project\ranvier\ranvier-workspace\ranvier\target\debug\deps\sse_streaming_demo-20dd2d20c8b5f202.long-type-6886525801599593631.txt'
     = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `?` couldn't convert the error: `dyn std::error::Error + Send + Sync: Sized` is not satisfied
  --> examples\sse-streaming-demo\src\main.rs:61:45
   |
61 |     app.bind("127.0.0.1:3000").run(()).await?;
   |     ----------------------------------------^ doesn't have a size known at compile-time
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Box<dyn std::error::Error + Send + Sync>>`
   |
   = help: the trait `Sized` is not implemented for `dyn std::error::Error + Send + Sync`
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = note: required for `Box<dyn std::error::Error + Send + Sync>` to implement `std::error::Error`
   = note: required for `anyhow::Error` to implement `From<Box<dyn std::error::Error + Send + Sync>>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `sse-streaming-demo` (bin "sse-streaming-demo") due to 3 previous errors
